--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 .header-img {
     width: 70px;
     height: 75px;
+    padding-left: 30px;
   }
   .main-img {
     width: 500px;
@@ -15,7 +16,7 @@
     top: 0;
     width: 100%;
     height: 100px;
-    padding-left: 20px;
+  
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -30,7 +31,7 @@
     gap: 30px;
     list-style: none;
     font-size: 20px;
-    padding-right: 80px;
+   padding-right: 100px;
   }
   
   .main {
@@ -59,7 +60,7 @@
     width: 100%;
     margin: auto;
     text-align: center;
-    background-color: beige;
+   
   }
 
   .flex-pics {
@@ -94,4 +95,22 @@
   .quoter {
     text-align: right;
   }
+ 
   
+  .signupclass {
+   background-color: blue; 
+   margin: 50px 200px;
+   display: flex;
+   align-items: center;
+   
+   
+
+  }
+
+
+ 
+
+  
+.signup_i {
+    flex: 1;
+}
