--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@
   .main-flex {
     margin-left: 250px;
     margin-right: 250px;
-    padding-top: 50px;
+    padding-top: 10px;
     display: flex;
     flex: 1;
     align-items: right;
@@ -54,6 +54,10 @@
 
   .main-flex > div {
     margin: auto;
+  }
+
+  h1 {
+    font-size: 50px;
   }
 
   .pics {
@@ -80,7 +84,7 @@
     display: flex;
     flex: 1
     height: 150px;
-    background-color: aquamarine;
+    background-color: grey;
   }
 .quote > div {
    margin: auto; 
@@ -99,7 +103,7 @@
   
   .signupclass {
    background-color: blue; 
-   margin: 50px 200px;
+   margin: 40px 200px;
    display: flex;
    align-items: center;
    
@@ -113,4 +117,11 @@
   
 .signup_i {
     flex: 1;
+}
+
+footer {
+    text-align: center;
+    background-color: grey;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
