--- a/styles.css
+++ b/styles.css
@@ -16,8 +16,8 @@ html {
   }
 
   @media only screen and (max-width: 550px) {
-    main-img {
-      width: 200px;
+    .main-img {
+      width: 300px;
       height: 150px
     }}
 
@@ -54,6 +54,7 @@ html {
   @media only screen and (max-width: 550px) {
     nav > ul {
       flex-wrap: wrap;
+      padding-right: 10px;
     }}
 
 
