--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ html {
 
   @media only screen and (max-width: 550px) {
     .main-img {
-      width: 300px;
+      width: 99.5%;
       height: 150px
     }}
 
@@ -70,6 +70,11 @@ html {
     background-color: grey;
     padding-bottom: 50px;
   }
+
+  @media only screen and (max-width: 550px) {
+    .main {
+      padding-left: 2%;
+    }}
   
   .main-flex {
     background-color: grey;
@@ -118,6 +123,13 @@ html {
     height: 150px;
     background-color: grey;
   }
+
+  @media only screen and (max-width: 550px) {
+    .quote {
+      padding-left: 2%;
+      padding-right: 2%;
+    }}
+
 .quote > div {
    margin: auto; 
 }
